Insere titulo no explanation e assinatura na pagina html

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <div>
     <p>How was the sky this day?</p>
-   </div>   
 
-   
+    
+  </div>
 
   <div class="conteudo">
 
@@ -25,12 +25,17 @@
         <input type="date" id="data" min="1995-06-20">
         <button id="submit">Send</button>
       </form>
-
+      <div id="titulo"></div>
       <div id="div2"></div>
 
     </div>
     
   </div>
+
+  <footer>
+    &copy; Nodja Moama
+
+  </footer>
   
 </body>
 </html>
